# artifactory-conan-loader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  packages.yml
profiles/: linux-x86_64-gcc-cxx17
scripts/: 01_setup_artifactory.sh  config.sh  deploy.py  download_sources.py  fetch.py  provision.py
test_project/: CMakeLists.txt  build.sh  conanfile.txt
test_project/proto/: addressbook.proto
test_project/src/: main.cpp
